@@ -1,4 +1,4 @@
-# $Id: SiteBot.properties,v 1.5 2004/10/11 22:57:53 mog Exp $
+# $Id$
 ## Modify this area to change appearance of iRC site channel announcements for new DIR creation
 ## Color #s are the same as ctrl+k in mirc
 
@@ -59,3 +59,6 @@ addslave=${color}15${bold}${slave}${coloroff} came online with ${bold}${diskfree
 delslave=${color}15${bold}${slave}${coloroff} went offline: ${message}
 
 shutdown=${color}15${bold}SHUTDOWN${coloroff} : ${message}
+
+ident.success=${color}15${bold}IDENT${bold}${coloroff}: You have been identified as ${bold}${user}${bold} with ident ${bold}${ident}${bold}
+ident.failed=${color}15${bold}IDENT${bold}${coloroff}: failed to identify you as ${bold}${user}${bold} with password '${pass}'
